--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="29dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="36dp"
         android:fontFamily="@font/changa_one"
         android:text="¿Aún no se registra? Hágalo aquí:"
         android:textColor="#82B1FF"
         android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/containedButton" />
+        app:layout_constraintTop_toBottomOf="@+id/botonIngresar" />
 
     <EditText
         android:id="@+id/contrasena"
@@ -100,11 +100,11 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/containedButton"
+        android:id="@+id/botonIngresar"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:layout_marginTop="44dp"
-        android:background="#99B388FF"
+        android:layout_marginTop="48dp"
+        android:background="@drawable/button_border"
         android:fontFamily="@font/changa_one"
         android:onClick="ingresar"
         android:text="Ingresar"
@@ -112,16 +112,15 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contrasena" />
 
     <Button
-        android:id="@+id/containedButton2"
+        android:id="@+id/botonRegistrar"
         android:layout_width="180dp"
         android:layout_height="42dp"
-        android:layout_marginTop="8dp"
-        android:background="#82B1FF"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_border"
         android:fontFamily="@font/changa_one"
         android:onClick="irRegistro"
         android:text="Registrarse"
