--- a/app/src/main/res/layout/activity_opciones_iniciales.xml
+++ b/app/src/main/res/layout/activity_opciones_iniciales.xml
@@ -21,9 +21,11 @@
         android:id="@+id/mostrarNombreUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#FFEBEE"
+        android:layout_marginTop="32dp"
+        android:textColor="#FFFFFF"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
