--- a/app/src/main/res/layout/activity_verificacion_caja.xml
+++ b/app/src/main/res/layout/activity_verificacion_caja.xml
@@ -52,7 +52,7 @@
         android:hint="*****"
         android:inputType="textPersonName"
         android:password="true"
-        android:textColor="#FFFFFF"
+        android:textColor="#80000000"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textContra" />
@@ -89,8 +89,8 @@
 
     <Spinner
         android:id="@+id/spinnerCajas"
-        android:layout_width="309dp"
-        android:layout_height="44dp"
+        android:layout_width="320dp"
+        android:layout_height="60dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="56dp"
         app:layout_constraintStart_toStartOf="parent"
