--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,14 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="29dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="360dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/changa_one"
         android:text="¿Aún no se registra? Hágalo aquí:"
         android:textColor="#82B1FF"
         android:textSize="19sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/botonIngresar" />
 
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="36dp"
         android:fontFamily="@font/changa_one"
         android:text="Contraseña:"
         android:textColor="#99B388FF"
@@ -75,12 +75,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/changa_one"
         android:text="Ingrese sus datos"
         android:textColor="#BFB388FF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -101,9 +102,9 @@
 
     <Button
         android:id="@+id/botonIngresar"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="219dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:background="@drawable/button_border"
         android:fontFamily="@font/changa_one"
         android:onClick="ingresar"
@@ -112,14 +113,15 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contrasena" />
 
     <Button
         android:id="@+id/botonRegistrar"
-        android:layout_width="180dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="219dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:background="@drawable/button_border"
         android:fontFamily="@font/changa_one"
         android:onClick="irRegistro"
@@ -127,9 +129,11 @@
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.466" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
