Todo funcional, permite ver accesos

--- a/app/src/main/res/layout/activity_verificacion_caja.xml
+++ b/app/src/main/res/layout/activity_verificacion_caja.xml
@@ -71,10 +71,10 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/volverVerificarCaja" />
+        app:layout_constraintStart_toEndOf="@+id/volverVerificarCaja1" />
 
     <ImageButton
-        android:id="@+id/volverVerificarCaja"
+        android:id="@+id/volverVerificarCaja1"
         android:layout_width="102dp"
         android:layout_height="61dp"
         android:layout_marginBottom="20dp"
