--- a/app/src/main/res/layout/fragment_permisos.xml
+++ b/app/src/main/res/layout/fragment_permisos.xml
@@ -66,6 +66,7 @@
             android:layout_marginTop="60dp"
             android:layout_marginEnd="40dp"
             android:background="@drawable/button_border"
+            android:text="Ejecutar"
             android:fontFamily="@font/changa_one"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
@@ -81,7 +82,6 @@
             android:layout_marginTop="60dp"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
-            android:onClick="regresar"
             android:padding="5dp"
             android:scaleType="centerInside"
             app:layout_constraintStart_toStartOf="parent"
