--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#B388FF</item>
         <item name="colorPrimaryDark">#B388FF</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#82B1FF</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
