--- a/app/src/main/res/layout/fragment_accesos.xml
+++ b/app/src/main/res/layout/fragment_accesos.xml
@@ -82,9 +82,9 @@
                 <TableLayout
                     android:id="@+id/tablaConsulta"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:gravity="center" />
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical" />
             </LinearLayout>
         </ScrollView>
 
